$Id: ChangeLog 4337 2016-08-28 18:38:13Z chrfranke $

2016-08-28  Christian Franke  <franke@computer.org>

	os_win32/installer.nsi: Fix quoting of EDITOR shortcuts.

	Send warning mails via PowerShell script on Windows (ticket #731):
	Makefile.am, os_win32/installer.nsi: Add new files.
	os_win32/smartd_mailer.ps1: New PowerShell script using Send-MailMessage
	cmdlet to send mail.
	os_win32/smartd_mailer.conf.sample.ps1: New sample config file.
	os_win32/smartd_warning.cmd: Call new script if configured.
	Improve error handling.  Add setlocal.
	smartd.conf.5.in: Document it.

2016-08-17  Christian Franke  <franke@computer.org>

	AUTHORS: Add Song Liu.

	smartctl.cpp: Reduce scope of 'persistent' flag
	(cppcheck: variableScope).

2016-08-17  Song Liu  <songliubraving@fb.com>

	ataprint.cpp, ataprint.h, smartctl.cpp, smartctl.8.in:
	Add persistent option ',p' to '-s wcreorder,on|off' (ticket #726).

	atacmds.cpp, atacmds.h, ataprint.cpp, ataprint.h, smartctl.cpp,
	smartctl.8.in: Add ability to control ATA drive write cache through
	SCT Feature control.  The new smartctl options are
	'-s wcache-sct,ata|on|off[,p]' and '-g wcache-sct' (ticket #723).

2016-08-06  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add Windows 10 build number to get_os_version_str().

	Update MSVC10 (VS2010) for VC14 (VS2015):
	os_win32/vc14/*: Move from os_win32/vc10/*.
	os_win32/vc14/*.vcxproj: Update for VC14.
	Remove '__func__' workaround (revert r4225).
	Makefile.am: Rename and update config-vc14 target.
	utility.cpp: Add workaround for missing 'tzname'.

	drivedb.h:
	- OCZ/Toshiba Trion SSDs: Rename, add TOSHIBA-TR150 (ticket #722)
	- HGST Ultrastar 7K6000 (ticket #708)
	- HGST Ultrastar He10
	- Seagate Desktop HDD.15: 6TB, 8TB
	- Seagate Enterprise Capacity 3.5 HDD: 8TB, 10TB (ticket #717),
	  attribute 240
	- Seagate SV35: 4TB
	- Western Digital Gold (ticket #711)
	- USB: LaCie (0x059f:0x1075) (ticket #718)
	- USB: Seagate Expansion External (0x0bc2:0x3322) (ticket #706)