@@ -13,7 +13,7 @@
 # You should have received a copy of the GNU General Public License
 # (for example COPYING); If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: smartd_mailer.ps1 4336 2016-08-28 18:26:56Z chrfranke $
+# $Id: smartd_mailer.ps1 4338 2016-09-07 19:31:28Z chrfranke $
 #
 
 $ErrorActionPreference = "Stop"
@@ -42,8 +42,24 @@ set SMARTD_FULLMSGFILE='X:\PATH\TO\Message.txt'
   exit 1
 }
 
+# Set default sender address
+if ($env:COMPUTERNAME -match '^[-_A-Za-z0-9]+$') {
+  $hostname = $env:COMPUTERNAME.ToLower()
+} else {
+  $hostname = "unknown"
+}
+if ($env:USERDNSDOMAIN -match '^[-._A-Za-z0-9]+$') {
+  $hostname += ".$($env:USERDNSDOMAIN.ToLower())"
+} elseif (     ($env:USERDOMAIN -match '^[-_A-Za-z0-9]+$') `
+          -and ($env:USERDOMAIN -ne $env:COMPUTERNAME)    ) {
+  $hostname += ".$($env:USERDOMAIN.ToLower()).local"
+} else {
+  $hostname += ".local"
+}
+
+$from = "smartd daemon <root@$hostname>"
+
 # Read configuration
-$from = "smartd daemon <root@$($env:COMPUTERNAME.ToLower()).local>"
 . .\smartd_mailer.conf.ps1
 
 # Create parameters
